<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#E6E6FA"
    android:layout_height="match_parent">



    <EditText
        android:id="@+id/price"
        android:layout_width="209dp"
        android:layout_height="37dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:hint="@string/name1"
        android:singleLine="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="Deprecated,MissingConstraints"
        tools:layout_editor_absoluteY="207dp"
        app:layout_constraintHorizontal_bias="0.503" />


    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="209dp"
        android:layout_height="37dp"
        android:entries="@array/matiere_array"
        android:prompt="@string/Role"
        tools:layout_editor_absoluteY="105dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.471"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="92dp"
        android:background="@drawable/rounded1"
        android:clickable="true"
        android:text="@string/save"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/button3"
        android:layout_width="36dp"
        android:layout_height="26dp"
        android:text="X"
        android:background="@android:color/transparent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintHorizontal_bias="0.99" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="155dp"
        android:layout_height="36dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="340dp"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="155dp"
        android:layout_height="36dp"
        tools:ignore="MissingConstraints"
        app:layout_constraintLeft_toRightOf="@+id/spinner"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@+id/textView21"
        app:layout_constraintHorizontal_bias="0.38" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="289dp"
        android:layout_height="66dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toTopOf="@+id/saveBtn"
        app:layout_constraintHorizontal_bias="0.506" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="matiere"
        android:layout_marginLeft="92dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/spinner1"
        app:layout_constraintVertical_bias="0.325" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="84dp"
        android:layout_height="19dp"
        android:text="Prix"
        tools:ignore="HardcodedText,MissingConstraints"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.281"
        android:layout_marginTop="27dp"
        app:layout_constraintTop_toBottomOf="@+id/spinner1" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="60dp"
        android:text="nombre heure"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/price" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="nombre etudiant"
        tools:ignore="HardcodedText"
        android:layout_marginRight="87dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/price" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="description"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/editText2"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/spinner2"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintVertical_bias="0.793" />


</android.support.constraint.ConstraintLayout>
